ASM-2434 Refactor CustomRequestMatcher and related tests; improve exception handling and remove unused variables